--- a/brain_fm_assignment_1_clone.css
+++ b/brain_fm_assignment_1_clone.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .section-2 {
@@ -14,6 +15,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1;
 }
 
 .section-3 {
@@ -23,6 +26,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .section-4 {
@@ -41,6 +45,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 a :visited {
